# gpmp2

./: .gitignore  CMakeLists.txt  execute_update_vs_full_knowledge_line.mp4.avi  gpmp2.h  package.xml
gpmp2/gp/: GPutils.cpp  GaussianProcessInterpolatorLie.h  GaussianProcessInterpolatorLinear.h  GaussianProcessPriorLie.h  GaussianProcessPriorLinear.h
gpmp2/kinematics/: Arm.cpp  GaussianPriorWorkspaceOrientation.h  GaussianPriorWorkspacePose.h  RobotModel-inl.h
gpmp2/obstacle/: AgentAvoidanceFactor-inl.h  AgentAvoidanceFactor.h  ObstacleCost.h  (+24 more)
mark_gpmp2/: Arm2FactorGraphMovingObstacle.m  Changing3DSDF.m  WAMFactorGraphMovingObstacle.m  case_2_experiment.m  createFactorGraph.m  fullPlanarDynamicExample.m  fullPlanarDynamicExample.m~  generate2Dmovingdataset.m  generate3Dmovingdataset.m  generate3Dmovingdataset.m~  generateFactorGraph.m  improvedArm2FractorGraphMovingObstacle.m  movingEnvironment.m  movingEnvironment.m~  plotCustomOccupancy3D.m  plotCustomSignedDistanceField3D.m  plotCustomSignedDistanceField3D.m~  plotMap3DMoving.m  rrt_planner.m  sdf_prediction_comparison.m  sdf_prediction_comparison.m~  sdf_testing.m  sdf_testing.m~  sdf_testing_3d.m  sdf_testing_3d.m~  signedDistanceField3D.prj  sliderAnimationExample.m  test_matrix_plots.m  testingChanging3DSDF.m  testingChangingSDF.m  testingErrors.m  testingOptimizer.m  testingStateEvolution.m  testing_plots.m  verifyingObstacleErrors.m  verifyingObstacleErrors.m~
matlab/: Arm2FactorGraphExample.m  MobileBaseFactorGraphExample.m  WAMFactorGraphExample.m  WAMReplannerExample.m
wrap/: matlab_wrapper.py
(+362 files in other folders)
