<?xml version="1.0"?>
<package format="3">
  <name>gpmp2</name>
  <version>0.0.0</version>
  <description>GPMP2</description>
  <maintainer email="tbd@tbd.tbd">tbd</maintainer>
  <license>Various</license>

  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <depend>liburdfdom-dev</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>gtsam</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
